--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "AwesomeProject",
-  "displayName": "AwesomeProject"
+  "name": "FoodDeliverySample",
+  "displayName": "FoodDeliverySample"
 }
